--- a/Front_End/HTML_and_CSS/index.html
+++ b/Front_End/HTML_and_CSS/index.html
@@ -7,6 +7,27 @@
     <title>HTML and CSS</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World! H1 Tag.</h1>
+    <h2>H2 Tag.</h2>
+    <h3>H3 Tag.</h3>
+    <h4>H4 Tag.</h4>
+    <h5>H5 Tag.</h5>
+    <h6>H6 Tag.</h6>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam deserunt est quam beatae modi quod molestiae iste optio at a. Maxime, voluptates ipsam. Ut voluptas tenetur fugit quas numquam deleniti!</p>
+
+    <ol>
+        <li>This is an</li>
+        <li>Ordered</li>
+        <li>List</li>
+    </ol>
+
+    <ul>
+        <li>This is an</li>
+        <li>Unordered</li>
+        <li>List</li>
+    </ul>
+
+    <img src="" alt="">
 </body>
 </html>
